==> zhengzhaolin-zzl/-AIoT-/bsp/esp01s/bsp_esp01s.c <==
#include "bsp_ESP01S.h"
#include "stdio.h"
#include "hmacsha1.h"
#include "string.h"
#include "dht11.h"
#include "adc.h"

void WIFI_USART_Init(unsigned int bund)
{
        /* 使能 WIFI_USART 的时钟 */
        rcu_periph_clock_enable(RCU_WIFI_USART);
        /* 使能时钟 */
        rcu_periph_clock_enable(RCU_WIFI_TX);
        rcu_periph_clock_enable(RCU_WIFI_RX);
        /*        配置引脚为复用功能 */
        gpio_af_set(PORT_WIFI_TX, BSP_WIFI_AF, GPIO_WIFI_TX);
        
        /*        配置引脚为复用功能 */
        gpio_af_set(PORT_WIFI_RX, BSP_WIFI_AF, GPIO_WIFI_RX);
        
        /*        配置TX引脚为复用上拉模式 */
        gpio_mode_set(PORT_WIFI_TX, GPIO_MODE_AF, GPIO_PUPD_PULLUP, GPIO_WIFI_TX);
        
        /*        配置RX引脚为复用上拉模式 */
        gpio_mode_set(PORT_WIFI_RX, GPIO_MODE_AF, GPIO_PUPD_PULLUP, GPIO_WIFI_RX);
        
        /*        配置PA2引脚为为输出模式 */
        gpio_output_options_set(PORT_WIFI_TX, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_WIFI_TX);
        
        /*        配置PA3引脚为为输出模式 */
        gpio_output_options_set(PORT_WIFI_RX, GPIO_OTYPE_PP, GPIO_OSPEED_50MHZ, GPIO_WIFI_RX);
        
        /*        设置WIFI_USART的波特率为115200 */
        usart_baudrate_set(WIFI_USART, bund);
        
        /*        设置WIFI_USART的校验位为无 */
        usart_parity_config(WIFI_USART, USART_PM_NONE);
        
        /*        设置WIFI_USART的数据位为8位 */
        usart_word_length_set(WIFI_USART, USART_WL_8BIT);
        
        /*        设置WIFI_USART的停止位为1位 */
        usart_stop_bit_set(WIFI_USART, USART_STB_1BIT);
        
        /*        使能串口1 */
        usart_enable(WIFI_USART);
        
        /*        使能WIFI_USART传输 */
        usart_transmit_config(WIFI_USART, USART_TRANSMIT_ENABLE);
        
        /*        使能WIFI_USART接收 */
        usart_receive_config(WIFI_USART, USART_RECEIVE_ENABLE);
        
        /*        使能WIFI_USART接收中断标志位 */
        usart_interrupt_enable(WIFI_USART, USART_INT_RBNE);   
        
  /*        使能WIFI_USART空闲中断标志位 */
        usart_interrupt_enable(WIFI_USART, USART_INT_IDLE); // DLE 线检测中断

        /* 配置中断优先级 */
        nvic_irq_enable(WIFI_USART_IRQ, 2, 2); // 配置中断优先级
}

void WIFI_USART_Send_Bit(unsigned char ch)
{
        //发送字符
        usart_data_transmit(WIFI_USART, ch);
        // 等待发送数据缓冲区标志自动置位
        while(RESET == usart_flag_get(WIFI_USART, USART_FLAG_TBE) );
}

uint8_t Get_Aliyun_json_data(JSON_PUBLISH *data)
{

    char *buff = 0;

    // 串口中断接收WIFI应答
    if (WIFI_RX_FLAG == SET)
    {
        printf("\r\n--\r\n");
        WIFI_RX_FLAG = 0;
        WIFI_RX_LEN = 0;

        // 确认接收到的数据包含 "params":
        if (strstr((char*)WIFI_RX_BUFF, "params\":") != NULL)
        {
            printf("Received data: %s\n", WIFI_RX_BUFF);  // 打印接收到的原始数据

            // 获取功能名称
            buff = strstr((char*)WIFI_RX_BUFF, "params\":");
            buff += strlen("params\":{\"");
            // 获取 keyname
            strcpy(data->keyname, strtok(buff, "\""));
            printf("data->keyname = %s\r\n", data->keyname);

            // 获取功能值
            buff = strstr((char*)WIFI_RX_BUFF, "params\":") + strlen("params\":{\"") + strlen(data->keyname) + 2;
            strcpy(data->value, strtok(buff, "}"));
            printf("data->value = %s\r\n", data->value);  // 打印解析的value值

            return 1;
        }
    }

    return 0;
}


/******************************************************************
 * 函 数 名 称：Clear_Aliyun_json_data
 * 函 数 说 明：清除JSON接收过的数据
 * 函 数 形 参：data=要清除的数据
 * 函 数 返 回：无
 * 备       注：无
******************************************************************/
void Clear_Aliyun_json_data(JSON_PUBLISH *data)
{
        uint16_t i = 0;
        while( data->keyname[i] != 0 )
        {
                data->keyname[i++] = '\0';
        }
        i= 0;
        while( data->value[i] != 0 )
        {
                data->keyname[i++] = '\0';
        }
}

//标识符
JSON_PUBLISH publish_mqtt_message[9]=        
{
        { "\\\"temperature\\\":","0" },
        { "\\\"humidity\\\":","0" },
				{"\\\"soil\\\":","0" },
				{"\\\"mq135\\\":","0" },
				{"\\\"flame\\\":","0" },
				{"\\\"bump_Switch\\\":","0" },
				{"\\\"jingdu\\\":","0" },//东西
				{"\\\"weidu\\\":","0" },//南北
				{"\\\"fire_Flag\\\":","0" }
};            

/******************************************************************
 * 函 数 名 称：Publish_MQTT_message
 * 函 数 说 明：发布主题 ，上发多个数据(设备将数据发送至手机)
 * 函 数 形 参：data=publish_mqtt_message， data_num=上传的数据个数
 * 函 数 返 回：无
 * 备       注：无
******************************************************************/
void Publish_MQTT_message(JSON_PUBLISH *data,uint8_t data_num)  
{
        char AT_CMD[384]={0};
        char params[256]={0},i,*sp;
        
        sp=params;
        
        sprintf(data[0].value,"%f",Get_temperature());   //把传感器的值赋值给json结构体的value
        sprintf(data[1].value,"%f",Get_humidity());
				sprintf(data[2].value,"%d",Get_Percentage_value(0));
        sprintf(data[3].value,"%d",Get_Percentage_value(1));
        sprintf(data[4].value,"%d",Get_Percentage_value(2));	
				sprintf(data[5].value,"%d",bump_Flag);
				sprintf(data[6].value, "%lf", lon_value);
				sprintf(data[7].value, "%lf", lat_value);
				sprintf(data[8].value,"%d",fire_Flag);
				
        //          4
        for(i=0;i<data_num;i++)
        {        // 3
                if(i<(data_num-1))
                {   
                        sprintf(sp,"%s%s%s",data[i].keyname,data[i].value,"\\,");
                        while(*sp!=0) {sp++;} //防止覆盖
                }
                else
                        sprintf(sp,"%s%s",data[i].keyname,data[i].value);
        }
        sprintf(AT_CMD,"AT+MQTTPUB=0,\"%s\",\"{\\\"params\\\":{%s}}\",1,0\r\n",PublishMessageTopPost,params);
        //发送指令后等待2000ms再判断是否发送成功，不发送成功则重发3-1次
    //这里会阻塞CPU的运行,可以直接使用    WIFI_USART_send_String(AT_CMD); 发送，但是无法判断是否发送成功。
    WIFI_Send_Cmd(AT_CMD,"OK",2000,3);                
}


/******************************************************************
 * 函 数 名 称：WIFI_USART_IRQHandler
 * 函 数 说 明：连接WIFI的串口中断服务函数
 * 函 数 形 参：无
 * 函 数 返 回：无
 * 备       注：无
******************************************************************/
void WIFI_USART_IRQHandler(void)
{
        if(usart_interrupt_flag_get(WIFI_USART,USART_INT_FLAG_RBNE) != RESET) // 接收缓冲区不为空
        {
        //接收数据
                WIFI_RX_BUFF[ WIFI_RX_LEN ] = usart_data_receive(WIFI_USART);
        
#if DEBUG
        //测试，查看接收到了什么数据
        printf("%c", WIFI_RX_BUFF[ WIFI_RX_LEN ]);
#endif
                //接收长度限制
        WIFI_RX_LEN = ( WIFI_RX_LEN + 1 ) % WIFI_RX_LEN_MAX;
        }
        if(usart_interrupt_flag_get(WIFI_USART,USART_INT_FLAG_IDLE) == SET) // 检测到空闲中断
        {
                usart_data_receive(WIFI_USART); // 必须要读，读出来的值不能要
                WIFI_RX_BUFF[WIFI_RX_LEN] = '\0'; //字符串结尾补 '\0'
                WIFI_RX_FLAG = SET;            // 接收完成
				usart_interrupt_flag_clear(WIFI_USART, USART_INT_FLAG_IDLE);
        }
}
