==> He-YanHao/MCU_Project/STM32F407VGT6_NRF24L01_嘉立创/bsp/bsp_esp01s.c <==
#include "bsp_ESP01S.h"
#include "stdio.h"
#include "board.h"
#include "hmacsha1.h"
#include "string.h"
#include <stdlib.h>

void WIFI_USART_Init(unsigned int bund)
{
	GPIO_InitTypeDef GPIO_InitStructure;        

	RCC_AHB1PeriphClockCmd(RCC_WIFI_TX,ENABLE);        // TX端口时钟
	RCC_AHB1PeriphClockCmd(RCC_WIFI_RX,ENABLE);        // RX端口时钟

	GPIO_PinAFConfig(PORT_WIFI_TX,GPIO_WIFI_TX_SOURCE, BSP_WIFI_AF);//IO口用作串口引脚要配置复用模式
	GPIO_PinAFConfig(PORT_WIFI_RX,GPIO_WIFI_RX_SOURCE, BSP_WIFI_AF);

	GPIO_StructInit(&GPIO_InitStructure);
	GPIO_InitStructure.GPIO_Pin           = GPIO_WIFI_TX;//TX引脚
	GPIO_InitStructure.GPIO_Mode          = GPIO_Mode_AF;//IO口用作串口引脚要配置复用模式
	GPIO_InitStructure.GPIO_Speed         = GPIO_Speed_100MHz;
	GPIO_InitStructure.GPIO_OType         = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd          = GPIO_PuPd_UP;
	GPIO_Init(PORT_WIFI_TX,&GPIO_InitStructure);

	GPIO_StructInit(&GPIO_InitStructure);
	GPIO_InitStructure.GPIO_Pin           = GPIO_WIFI_RX;//RX引脚
	GPIO_InitStructure.GPIO_Mode          = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_Speed         = GPIO_Speed_100MHz;
	GPIO_InitStructure.GPIO_OType         = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_PuPd          = GPIO_PuPd_UP;
	GPIO_Init(PORT_WIFI_RX,&GPIO_InitStructure);

	USART_InitTypeDef USART_InitStructure;//定义配置串口的结构体变量

	RCC_APB1PeriphClockCmd(RCC_WIFI_USART, ENABLE);//开启串口2的时钟

	USART_DeInit(WIFI_USART);//大概意思是解除此串口的其他配置

	USART_StructInit(&USART_InitStructure);
	USART_InitStructure.USART_BaudRate              = bund;//设置波特率
	USART_InitStructure.USART_WordLength            = USART_WordLength_8b;//字节长度为8bit
	USART_InitStructure.USART_StopBits              = USART_StopBits_1;//1个停止位
	USART_InitStructure.USART_Parity                = USART_Parity_No ;//没有校验位
	USART_InitStructure.USART_Mode                  = USART_Mode_Rx | USART_Mode_Tx;//将串口配置为收发模式
	USART_InitStructure.USART_HardwareFlowControl   = USART_HardwareFlowControl_None; //不提供流控 
	USART_Init(WIFI_USART,&USART_InitStructure);//将相关参数初始化给串口2
	
	USART_ITConfig(WIFI_USART, USART_IT_RXNE, ENABLE);//初始配置接受中断
	USART_ITConfig(WIFI_USART, USART_IT_IDLE, ENABLE);//初始配置接受中断
	
	USART_ClearFlag(WIFI_USART,USART_FLAG_RXNE);//初始配置时清除接受置位
	USART_ClearFlag(WIFI_USART,USART_IT_IDLE);//初始配置时清除接受置位

	USART_Cmd(WIFI_USART, ENABLE);//开启串口2
	
	NVIC_InitTypeDef NVIC_InitStructure;//中断控制结构体变量定义

	NVIC_InitStructure.NVIC_IRQChannel                    = WIFI_USART_IRQ;//中断通道指定为USART2
	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority  = 1;//主优先级为0
	NVIC_InitStructure.NVIC_IRQChannelSubPriority         = 1;//次优先级为1
	NVIC_InitStructure.NVIC_IRQChannelCmd                 = ENABLE;//确定使能
	NVIC_Init(&NVIC_InitStructure);//初始化配置此中断通道
}

void WIFI_USART_Send_Bit(unsigned char ch)
{
    USART_SendData(WIFI_USART, (uint8_t)ch);
        
	while( RESET == USART_GetFlagStatus(WIFI_USART, USART_FLAG_TXE) ){} // 等待发送数据缓冲区标志置位

}

uint8_t Get_Aliyun_json_data(JSON_PUBLISH *data)
{
        char *buff=0;
    //串口中断接收WIFI应答
    if( WIFI_RX_FLAG == SET )
    {
                printf("\r\n--\r\n");
        WIFI_RX_FLAG = 0;
        WIFI_RX_LEN = 0;
        //有设备连接了热点
        if( strstr((char*)WIFI_RX_BUFF, "params\":") != NULL )
        {
                        //获取功能名称
                        buff = strstr((char*)WIFI_RX_BUFF, "params\":");
                        buff += strlen("params\":{\"");
                        strcpy(data->keyname,strtok(buff,"\""));
                        printf("data->keyname = %s\r\n",data->keyname);
                        //获取功能值
                        buff = strstr((char*)WIFI_RX_BUFF, "params\":" );
                        buff += strlen("params\":{\"")+strlen(data->keyname)+2;
                        strcpy(data->value, strtok(buff,"}"));
            return 1;
        }
        }
    return 0;
}


/******************************************************************
 * 函 数 名 称：Clear_Aliyun_json_data
 * 函 数 说 明：清除JSON接收过的数据
 * 函 数 形 参：data=要清除的数据
 * 函 数 返 回：无
 * 作       者：LC
 * 备       注：无
******************************************************************/
void Clear_Aliyun_json_data(JSON_PUBLISH *data)
{
        uint16_t i = 0;
        while( data->keyname[i] != 0 )
        {
                data->keyname[i++] = '\0';
        }
        i= 0;
        while( data->value[i] != 0 )
        {
                data->keyname[i++] = '\0';
        }
}

//在自定义功能时，有多少个标识符，就添加多少个
//我就只有两个标识符。
//LED_Switch=LED开关 范围0-1
//brightness=亮度    范围0-100
JSON_PUBLISH publish_mqtt_message[2]=        
{
        { "\\\"LED_Switch\\\":","0" },
        { "\\\"brightness\\\":","0" }
};            

/******************************************************************
 * 函 数 名 称：Publish_MQTT_message
 * 函 数 说 明：发布主题 ，上发多个数据(设备将数据发送至手机)
 * 函 数 形 参：data=publish_mqtt_message， data_num=上传的数据个数
 * 函 数 返 回：无
 * 作       者：LC
 * 备       注：无
******************************************************************/
void Publish_MQTT_message(JSON_PUBLISH *data,uint8_t data_num)  
{
        char AT_CMD[384]={0};
        char params[256]={0},i,*sp;
        
        sp=params;
        
        sprintf(data[0].value,"%d",0);   //把传感器的值赋值给json结构体的value
        sprintf(data[1].value,"%d",90);
        
        //          4
        for(i=0;i<data_num;i++)
        {        // 3
                if(i<(data_num-1))
                {   
                        sprintf(sp,"%s%s%s",data[i].keyname,data[i].value,"\\,");
                        while(*sp!=0) {sp++;} //防止覆盖
                }
                else
                        sprintf(sp,"%s%s",data[i].keyname,data[i].value);
        }
        sprintf(AT_CMD,"AT+MQTTPUB=0,\"%s\",\"{\\\"params\\\":{%s}}\",1,0\r\n",PublishMessageTopPost,params);
        //发送指令后等待2000ms再判断是否发送成功，不发送成功则重发3-1次
    //这里会阻塞CPU的运行,可以直接使用    WIFI_USART_send_String(AT_CMD); 发送，但是无法判断是否发送成功。
    WIFI_Send_Cmd(AT_CMD,"OK",2000,3);                
}


/******************************************************************
 * 函 数 名 称：WIFI_USART_IRQHandler
 * 函 数 说 明：连接WIFI的串口中断服务函数
 * 函 数 形 参：无
 * 函 数 返 回：无
 * 作       者：LC
 * 备       注：无
******************************************************************/
void WIFI_USART_IRQHandler(void)
{
        if(USART_GetITStatus(WIFI_USART, USART_IT_RXNE) == SET) // 接收缓冲区不为空
        {
        //接收数据
                WIFI_RX_BUFF[ WIFI_RX_LEN ] = USART_ReceiveData(WIFI_USART);
        
#if DEBUG
        //测试，查看接收到了什么数据
        printf("%c", WIFI_RX_BUFF[ WIFI_RX_LEN ]);
#endif
                //接收长度限制
        WIFI_RX_LEN = ( WIFI_RX_LEN + 1 ) % WIFI_RX_LEN_MAX;
        }
        if(USART_GetITStatus(WIFI_USART, USART_IT_IDLE) == SET) // 检测到空闲中断
        {
                volatile uint32_t temp;
                temp = WIFI_USART->SR; // 读取状态寄存器以清除IDLE标志
                temp = WIFI_USART->DR; // 读取数据寄存器以清除IDLE标志
			
                WIFI_RX_BUFF[WIFI_RX_LEN] = '\0'; //字符串结尾补 '\0'
                WIFI_RX_FLAG = SET;            // 接收完成
        }
}
